another round of JDR review

--- a/Round2/Manuscript/Permuting_Accuracy.bib
+++ b/Round2/Manuscript/Permuting_Accuracy.bib
@@ -1473,3 +1473,10 @@ Contact: tongt@hkbu.edu.hk},
 	year={2000},
 	publisher={Elsevier}
 }
+
+@book{stevens2012applied,
+	title={Applied multivariate statistics for the social sciences},
+	author={Stevens, James P},
+	year={2012},
+	publisher={Routledge}
+}
