--- a/Round2/Manuscript/Permuting_Accuracy.bib
+++ b/Round2/Manuscript/Permuting_Accuracy.bib
@@ -1480,3 +1480,14 @@ Contact: tongt@hkbu.edu.hk},
 	year={2012},
 	publisher={Routledge}
 }
+
+@article{schreiber2013statistical,
+	title={The statistical analysis of multi-voxel patterns in functional imaging},
+	author={Schreiber, Kai and Krekelberg, Bart},
+	journal={PLoS One},
+	volume={8},
+	number={7},
+	pages={e69328},
+	year={2013},
+	publisher={Public Library of Science}
+}
