--- a/Round2/Manuscript/preamble.tex
+++ b/Round2/Manuscript/preamble.tex
@@ -29,9 +29,6 @@
 	Department of IE\&M and \\
 	Zlotowsky Center for Neuroscience, \\
 	Ben Gurion University of the Negev, Israel. 
-	\and Jelle Goeman \\ 
-	Department of Medical Statistics and Bioinformatics, \\
-	Leiden University Medical Center, The Netherlands.
 	\and Yuval Benjamini\\
 	Department of Statistics, \\
 	Hebrew University, Israel
@@ -40,7 +37,11 @@
 	University of California, San Francisco. 
 	\and Roy Mukamel \\ 
 	School of Psychological Science\\
-	Tel Aviv University, Israel.}
+	Tel Aviv University, Israel.
+	\and Jelle Goeman \\ 
+	Department of Medical Statistics and Bioinformatics, \\
+	Leiden University Medical Center, The Netherlands.
+	}
 
 
 %% OPTIONAL MACRO DEFINITIONS
