--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -12,14 +12,16 @@
 %\linenumbers
 
 \begin{abstract}
-Many neuroscientists and geneticists detect signal by fitting a classifier and testing whether it's prediction accuracy is better than chance. 
-We show that using a classifier's accuracy as a test statistic is an underpowered strategy for finding differences between populations, compared to a bona-fide statistical test.
-Testing with a classifier accuracy is also vastly more computationaly complex than a multivaraite test. 
-Via simulation, we compare various test statistics: some based on classifiers and some based on multivariate tests. 
-Our main conclusions are that testing using classifiers is a low powered approach to signal detection. 
-Neyman-Pearson's Lemma hints at the preferred test given the type of signal expected, and high-dimensional location tests are a good off-the-shelf strategy.
-For the cases in which the purpose of the analysis is not signal detection, but rather to evaluate the performance of a particular classifier, we suggest several improvements to increase power. 
-In particular, to replace V-fold CV with the leave-one-out Bootstrap.
+A common practice in supervised machine learning, is fitting a classifier and then testing if it's prediction accuracies are better than chance level.
+This method of signal detection is particularly popular in neuroimaging and genetics.
+We provide evidence that using a classifier's accuracy as a test statistic can be an underpowered strategy for finding differences between populations, compared to a bona-fide statistical test.
+It is also computationally more demanding than a statistical test. 
+Via simulation, we compare test statistics that are based on classification accuracy, to others based on multivariate test statistics. 
+Across many simulation scenarios, we find that probability of identifying non-identical distributions is lower for accuracy based statistics.
+We examine several candidate causes for the low power of accuracy tests. 
+These include: the discrete nature of the test statistic, the type of signal they are designed to detect, their inefficient use of the data, and their regularization. 
+When the purposes of the analysis is not signal detection, but rather, to evaluate the performance of a particular classifier, we suggest several improvements to increase power. 
+In particular, to replace V-fold cross validation with the leave-one-out Bootstrap.
 \end{abstract}
 
 
@@ -28,9 +30,9 @@ In particular, to replace V-fold CV with the leave-one-out Bootstrap.
 \label{sec:introduction}
 
 Many neuroscientists and geneticists detect signal by fitting a classifier and testing whether it's prediction accuracy is better than chance. 
-The workflow in consists of fitting a classifier, and estimating its predictive accuracy using cross validation. 
+The workflow consists of fitting a classifier, and estimating its predictive accuracy using cross validation. 
 Given that the cross validated accuracy is a random quantity, it is then common to test if the cross validated accuracy is significantly better than chance using a permutation test.  
-Examples in the neuroscientific literature include \citet{golland_permutation_2003,pereira_machine_2009,varoquaux_assessing_2016}, and especially the recently popularized \emph{multivariate pattern analysis} (MVPA) framework of \citet{kriegeskorte_information-based_2006}.
+Examples in the neuroscientific literature include \citet{golland_permutation_2003,pereira_machine_2009,schreiber2013statistical,varoquaux_assessing_2016}, and especially the recently popularized \emph{multivariate pattern analysis} (MVPA) framework of \citet{kriegeskorte_information-based_2006}.
 For examples in the genetics literature see for example
 \citet{golub_molecular_1999,slonim_class_2000,radmacher_paradigm_2002,mukherjee_estimating_2003,juan_prediction_2004,jiang_calculating_2008}.
 
@@ -40,7 +42,7 @@ In \cite{gilron_quantifying_2016}, the authors seek to detect brain regions that
 Following the MVPA workflow, the localization problem is cast as a supervised learning problem: if the type of the stimulus can be predicted from the brain's activation pattern significantly better than chance, then a region is declared to encode vocal/non-vocal information. 
 We call this an \emph{accuracy test}, because it uses the prediction accuracy as a test statistic. 
 
-This same signal detection task can be also approached as a multivariate test.
+This same signal detection task can also be approached as a multivariate test.
 Inferring that a region encodes vocal/non-vocal information, is essentially inferring that the spatial distribution of brain activations is different given a vocal/non-vocal stimulus. 
 As put in \cite{pereira_machine_2009}: 
 \begin{quote}
@@ -772,7 +774,7 @@ Accuracy tests are seen as ``black boxes'', even though they can be analyzed in 
 \citet{gilron2017s} demonstrate that the type of signal captured by accuracy tests is less interpretable to neuroimaging practitioners than location tests. 
 
 Some authors prefer accuracy tests because they can be seen as effect-size estimates, invariant to the sample size. 
-This is true, but the multivariate-statistics literature provides many multivariate effect-size estimators, most directly generalize Cohen's d, and not suffer from discretization like accuracy estimates. 
+This is true, but the multivariate-statistics literature provides many multivariate effect-size estimators, that generalize Cohen's d, and do not suffer from discretization like accuracy estimates. 
 Examples can be found, for instance, in \cite{stevens2012applied} and references therein. 
 
 
@@ -781,7 +783,7 @@ Examples can be found, for instance, in \cite{stevens2012applied} and references
 \subsection{Fixed SNR}
 \label{sec:fix_snr}
 
-For a fair comparisons between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
+For a fair comparison between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
 We defined ``a fair comparison'' to be such that a maximal power test would have the same power, justifying our choice of fixing the Mahalanobis norm of $\mu$. 
 Formally, in all our simulations we set $\Vert \mu \Vert_\Sigma^2=c^2 p$.
 
@@ -893,6 +895,14 @@ They propose a new test they call an \emph{independence test}, and demonstrate b
 We did not include this test in the battery we compared, but we note that the independence test of \cite{olivetti_induction_2012} relies on a discrete test statistic. 
 It may thus be improved by regularizing and resampling with replacement. 
 
+
+\cite{schreiber2013statistical} used null simulations to study the statistical properties of linear SVM's for signal detection, and in particular, false positive rates. 
+They did not study the matter of power.
+They recommended to test the significance of accuracy estimates using permutation testing instead of parametric t-tests, or binomial tests.
+They recommend so due to the correlations between data folds in V-fold CV.
+The authors were also concerned with temporal correlations, which biases accuracy estimates even if cross validated. 
+Bias in accuracy estimates is of great concern when studying a classifier, but it is of lesser concern when using the accuracy merely for localization. 
+Their recommendations differ from ours: they recommend to ensure independent data foldings in V-fold CV, whereas we claim discretization is the real concern, and thus recommend bLOO.
 
 \cite{golland_permutation_2003} and \cite{golland_permutation_2005} study accuracy tests using simulation, neuroimaging data, genetic data, and analytically.
 The finite Vapnik–Chervonenkis dimension requirement \citep[Sec 4.3]{golland_permutation_2005} implies a the problem is low dimensional and prevents the permutation p-value from (asymptotically) concentrating near $1$. 
