--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -4,6 +4,7 @@
 
 \title{Better-Than-Chance Classification for Signal Detection}
 
+\fancyhead[LO]{Classification for Signal Detection}
 
 \begin{document}
 
@@ -24,6 +25,9 @@ These causes include: the discrete nature of the accuracy test statistic, the ty
 When the purposes of the analysis is not signal detection, but rather, the evaluation of a particular classifier, we suggest several improvements to increase power. 
 In particular, to replace V-fold cross validation with the Leave-One-Out Bootstrap.
 \end{abstract}
+
+\keywords{signal-detection; multivariate-testing; supervised-learning; hypothesis-testing; high-dimension}
+
 
 
 %%%% Introduction %%%
@@ -965,7 +969,7 @@ and related ``data science'' communities.
 
 
 
-\section{Acknowledgments}
+\section*{Acknowledgments}
 JDR was supported by the ISF 900/60 research grant. 
 JDR also wishes to thank, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir, Joshua Vogelstein, Gilles Blanchard, and Jason Stein for their valuable inputs. 
 
