--- a/Round3/Manuscript/permuting_accuracy.tex
+++ b/Round3/Manuscript/permuting_accuracy.tex
@@ -1001,9 +1001,10 @@ and related ``data science'' communities.
 
 
 
-\section*{Acknowledgments}
-JDR was supported by the ISF 900/60 research grant. 
-JDR also wishes to thank, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir, Joshua Vogelstein, Gilles Blanchard, and Jason Stein for their valuable inputs. 
+\acks{JDR was supported by the ISF 900/60 research grant. 
+	JDR also wishes to thank, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir, Joshua Vogelstein, Gilles Blanchard, and Jason Stein for their valuable inputs. 
+}
+
 
 
 
